@@ -1,5 +1,7 @@
 *SVN*
 
+* MySQL: fix show_variable.  #8448 [matt, Jeremy Kemper]
+
 * Fixtures: correctly delete and insert fixtures in a single transaction.  #8553 [Michael Schuerig]
 
 * Fixtures: people(:technomancy, :josh) returns both fixtures.  #7880 [technomancy, Josh Peek]
